[B] Fix title + summary text wrapping

--- a/packages/frontend/components/templates/lists/blocks/Summary/Summary.module.css
+++ b/packages/frontend/components/templates/lists/blocks/Summary/Summary.module.css
@@ -20,8 +20,6 @@
 }
 
 .title {
-  width: max-content;
-
   a:hover &,
   a:focus-visible & {
     @mixin a-link-hover-focus;
