--- a/packages/frontend/components/templates/lists/items/Summary/Summary.module.css
+++ b/packages/frontend/components/templates/lists/items/Summary/Summary.module.css
@@ -69,6 +69,10 @@
 .summary {
   margin-block-start: 1rem;
   color: var(--color-lighter);
+
+  pre {
+    white-space: pre-wrap;
+  }
 }
 
 .group {
